# neuraldiff

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE  README.md  TODO.md  USER_GUIDE.md
.github/workflows/: ci.yml
.md/: ARCHITECTURE.md  README.md  ROADMAP.md  SPEC_TUI.md  SPEC_VIZ.md
docs/roadmap/: neuraldiff-analysis-and-monster-features.md
docs/superpowers/plans/: 2026-05-05-multishard-support.md
docs/superpowers/specs/: 2026-05-05-multishard-support-design.md
models/: model_a.safetensors  model_b.safetensors
scripts/: generate_fixtures.py
src/: checkpoint.rs  cli.rs  diff.rs  lib.rs  loader.rs  main.rs  mapper.rs  metrics.rs  scanner.rs  terminal.rs  tui.rs  types.rs  web.rs
tests/: checkpoint_tests.rs  diff_tests.rs  loader_tests.rs  mapper_tests.rs  metrics_tests.rs  multishard_tests.rs
tests/fixtures/: tiny_model_a.safetensors  tiny_model_b.safetensors
