[package]
name = "neuraldiff"
version = "0.1.0"
edition = "2024"
authors = ["NeuralDiff Contributors"]
description = "Visual diff between AI model checkpoints"
license = "MIT"
repository = "https://github.com/remic/neuraldiff"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:tokio", "dep:axum", "dep:tower-http"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Terminal UI (feature: tui)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Safetensors parsing
safetensors = "0.4"
memmap2 = "0.9"

# Math & parallelism
ndarray = "0.15"
rayon = "1.10"

# Web server (feature: web)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Dtype conversion
half = "2.4"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Directory scanning
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
