[package]
name = "neuraldiff"
version = "0.2.1"
edition = "2024"
rust-version = "1.88"
authors = ["NeuralDiff Contributors"]
description = "Visual diff for AI model checkpoints — terminal UI, layer-level metrics, heatmaps, JSON/CSV export."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Zertannax/neuraldiff"
homepage = "https://github.com/Zertannax/neuraldiff"
documentation = "https://github.com/Zertannax/neuraldiff#readme"
keywords = ["ai", "safetensors", "diff", "tui", "machine-learning"]
categories = ["command-line-utilities", "visualization", "development-tools"]
exclude = ["assets/", "tests/fixtures/", "models/", "docs/", ".github/", "*.png", "TODO.md"]

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
web = ["dep:tokio", "dep:axum", "dep:tower-http"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Terminal UI (feature: tui)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Safetensors parsing
safetensors = "0.4"
memmap2 = "0.9"

# Math & parallelism
ndarray = "0.15"
rayon = "1.10"

# Web server (feature: web)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["fs"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pattern matching
regex = "1.11"

# Error handling
anyhow = "1.0"

# Dtype conversion
half = "2.4"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Directory scanning
dirs = "5.0"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
